--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-addressbook",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "private": true,
   "author": {
     "name": "Wire"
@@ -35,5 +35,6 @@
   "bugs": {
     "url": "http://github.com/wearezeta/node-addressbook/issues"
   },
-  "gypfile": true
+  "gypfile": true,
+  "dependencies": {}
 }
