--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-addressbook",
-  "version": "1.0.2",
+  "version": "1.2.0",
   "private": true,
   "author": {
     "name": "Wire"
@@ -10,6 +10,10 @@
       "name": "Chris Owen",
       "email": "chris@wire.com",
       "url": "http://wire.com"
+    },
+    {
+      "name": "Fareed Al-Namrouti",
+      "email": "digital.flowers@hotmail.com"
     }
   ],
   "description": "OSX addressbook access for node",
@@ -36,5 +40,11 @@
     "url": "http://github.com/wearezeta/node-addressbook/issues"
   },
   "gypfile": true,
-  "dependencies": {}
+  "dependencies": {
+    "nan": "^2.4.0"
+  },
+  "devDependencies": {
+    "colors": "^1.1.2",
+    "readline": "^1.3.0"
+  }
 }
