--- a/package.json
+++ b/package.json
@@ -16,12 +16,19 @@
   },
   "description": "OSX addressbook access for node",
   "devDependencies": {
+    "@types/node": "11.11.4",
     "colors": "1.3.3",
-    "readline": "1.3.0"
+    "linebyline": "1.3.0",
+    "prettier": "1.16.4",
+    "rimraf": "2.6.3",
+    "typescript": "3.3.4000"
   },
   "engines": {
     "node": ">=0.10.0"
   },
+  "files": [
+    "dist"
+  ],
   "gypfile": true,
   "homepage": "https://wire.com",
   "keywords": [
@@ -32,12 +39,19 @@
     "binding",
     "c"
   ],
+  "main": "dist/index.js",
   "name": "node-addressbook",
-  "os": [ "darwin" ],
+  "os": [
+    "darwin"
+  ],
   "private": true,
   "repository": "git+https://git@github.com/wearezeta/node-addressbook.git",
   "scripts": {
-    "postinstall": "node-gyp rebuild",
+    "build": "yarn build:ts && yarn build:gyp",
+    "build:gyp": "node-gyp rebuild",
+    "build:ts": "tsc",
+    "clear": "rimraf build dist",
+    "dist": "yarn clear && yarn build",
     "test": "exit 0"
   },
   "version": "1.2.0"
