chore: Update dependencies and add linting

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,5 +1,9 @@
-.travis.yml
-dist
-build
-node_modules
+/config
+/wrap
+/.github/issue_template.md
+coverage
+.nyc_output
+instrumented-code
 package.json
+package-lock.json
+electron/locale
