--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,7 @@
 {
   "compilerOptions": {
     "declaration": true,
-    "lib": [
-      "dom",
-      "es2018"
-    ],
+    "lib": ["dom", "es2018"],
     "module": "commonjs",
     "moduleResolution": "node",
     "noEmitOnError": true,
@@ -16,8 +13,5 @@
     "strict": true,
     "target": "es6"
   },
-  "exclude": [
-    "dist",
-    "node_modules",
-  ]
+  "exclude": ["dist", "node_modules"]
 }
