--- a/package.json
+++ b/package.json
@@ -1,16 +1,5 @@
 {
   "author": "Wire Swiss <wireapp@wire.com>",
-  "contributors": [
-    {
-      "email": "chris@wire.com",
-      "name": "Chris Owen",
-      "url": "http://wire.com"
-    },
-    {
-      "email": "digital.flowers@hotmail.com",
-      "name": "Fareed Al-Namrouti"
-    }
-  ],
   "dependencies": {
     "nan": "2.13.2"
   },
@@ -48,9 +37,7 @@
     "address",
     "addressbook",
     "contacts",
-    "wire",
-    "binding",
-    "c"
+    "binding"
   ],
   "license": "GPL-3.0",
   "lint-staged": {
@@ -82,9 +69,8 @@
     "lint": "yarn lint:other && yarn lint:ts",
     "lint:other": "yarn prettier --list-different",
     "lint:ts": "tslint --project tsconfig.json",
-    "postinstall": "node-gyp rebuild",
     "prettier": "prettier \"**/*.{json,md,yml}\"",
-    "test": "yarn lint"
+    "test": "yarn lint && yarn dist"
   },
   "version": "3.0.2"
 }
