--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/node": "~12",
     "@wireapp/prettier-config": "0.2.0",
     "@wireapp/tslint-config": "1.0.2",
+    "clang-format": "1.2.4",
     "husky": "2.2.0",
     "lint-staged": "8.1.6",
     "prettier": "1.17.0",
@@ -45,6 +46,9 @@
       "tslint --project tsconfig.json --fix",
       "git add"
     ],
+    "*.{h,cc}": [
+      "check-clang-format"
+    ],
     "*.{json,md,yml}": [
       "prettier --write",
       "git add"
@@ -63,10 +67,11 @@
     "build:ts": "tsc",
     "clear": "rimraf build dist",
     "dist": "yarn clear && yarn build",
-    "fix": "yarn fix:other && yarn fix:ts",
+    "fix": "yarn fix:other && yarn lint:cpp && yarn fix:ts",
     "fix:other": "yarn prettier --write",
     "fix:ts": "yarn lint:ts --fix",
-    "lint": "yarn lint:other && yarn lint:ts",
+    "lint": "yarn lint:other && yarn lint:cpp && yarn lint:ts",
+    "lint:cpp": "check-clang-format",
     "lint:other": "yarn prettier --list-different",
     "lint:ts": "tslint --project tsconfig.json",
     "prettier": "prettier \"**/*.{json,md,yml}\"",
