--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
       "git add"
     ],
     "*.{h,cc}": [
-      "check-clang-format"
+      "clang-format -i",
+      "git add"
     ],
     "*.{json,md,yml}": [
       "prettier --write",
@@ -57,7 +58,8 @@
   "main": "dist/index.js",
   "name": "@wireapp/node-addressbook",
   "os": [
-    "darwin"
+    "darwin",
+    "linux"
   ],
   "prettier": "@wireapp/prettier-config",
   "repository": "https://github.com/wireapp/node-addressbook.git",
@@ -68,6 +70,7 @@
     "clear": "rimraf build dist",
     "dist": "yarn clear && yarn build",
     "fix": "yarn fix:other && yarn lint:cpp && yarn fix:ts",
+    "fix:cpp": "npx clang-format -i --glob=\"src/cpp/*.{h,cc}\"",
     "fix:other": "yarn prettier --write",
     "fix:ts": "yarn lint:ts --fix",
     "lint": "yarn lint:other && yarn lint:cpp && yarn lint:ts",
