--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "build:ts": "tsc",
     "clear": "rimraf build dist",
     "dist": "yarn clear && yarn build",
-    "fix": "yarn fix:other && yarn lint:cpp && yarn fix:ts",
+    "fix": "yarn fix:other && yarn fix:cpp && yarn fix:ts",
     "fix:cpp": "npx clang-format -i --glob=\"src/cpp/*.{h,cc}\"",
     "fix:other": "yarn prettier --write",
     "fix:ts": "yarn lint:ts --fix",
