chore: Add progress bar to example

--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "description": "OSX addressbook access for node",
   "devDependencies": {
     "@types/node": "~12",
+    "@types/progress": "2.0.3",
     "@wireapp/prettier-config": "0.2.0",
     "@wireapp/tslint-config": "1.0.2",
     "clang-format": "1.2.4",
     "husky": "2.2.0",
     "lint-staged": "8.1.6",
     "prettier": "1.17.0",
+    "progress": "2.0.3",
     "rimraf": "2.6.3",
     "tslint": "5.16.0",
     "tslint-config-prettier": "1.18.0",
