--- a/package.json
+++ b/package.json
@@ -45,16 +45,13 @@
   "license": "GPL-3.0",
   "lint-staged": {
     "*.ts": [
-      "tslint --project tsconfig.json --fix",
-      "git add"
+      "tslint --project tsconfig.json --fix"
     ],
     "*.{h,cc}": [
-      "clang-format -i",
-      "git add"
+      "clang-format -i"
     ],
     "*.{json,md,yml}": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   },
   "main": "dist/index.js",
